# repolens

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  USER_MANUAL.md  app.py  gemini_demo.py  main.py  pyproject.toml
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
docs/: contributor-growth-plan.md  spec-kit.md  user-growth-plan.md
specify/memory/: constitution.md
specs/: plan.md
specs/001-repolens/: spec.md  tasks.md
src/analyzers/: gemini_analyzer.py  ollama_analyzer.py  repo_analyzer.py
src/utils/: report_generator.py  repository_fetcher.py
tests/: test_import.py  tests_import.py
